@@ -2753,6 +2753,7 @@ Please merge them manually.'''",
 'movepage-max-pages'           => 'The maximum of $1 {{PLURAL:$1|page|pages}} has been moved and no more will be moved automatically.',
 '1movedto2'                    => '[[$1]] moved to [[$2]]',
 '1movedto2_redir'              => '[[$1]] moved to [[$2]] over redirect',
+'move-redirect-suppressed'     => 'redirect suppressed',
 'movelogpage'                  => 'Move log',
 'movelogpagetext'              => 'Below is a list of pages moved.',
 'movereason'                   => 'Reason:',
